proj1/testing/error/incorrectNumRotors.inp
* B BETA I (AA)
HELLO WORLD